Converting keywords from String to Array
... so the plugin appears on http://gruntjs.com/plugins

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "grunt": "~0.4.0"
   },
   "keywords": [
-    "gruntplugin jst"
+    "gruntplugin",
+    "jst"
   ],
   "files": [
     "tasks",
